--- a/src/Components/ProductDescription.css
+++ b/src/Components/ProductDescription.css
@@ -1,74 +1,71 @@
-.cart {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-}
-
-.cart-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 800px;
-}
-
 .product-image {
-  width: 400px;
-  height: 400px;
-  object-fit: cover;
-  margin-right: 20px;
+  margin: 70px auto 0;
+  width: 100%;
+  max-width: 480px;
+  height: auto;
+  object-fit: contain;
+  margin-right: 0;
+  max-height: 400px;
 }
 
-.product-details {
-  flex-grow: 1;
-}
-
-.product-title {
-  font-size: 24px;
-  margin-top: 0;
+.title-price-description {
+  margin-top: 30px;
+  text-align: left;
 }
 
 .product-description {
-  font-size: 16px;
-}
-
-.product-quantity {
-  display: flex;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.product-quantity label {
-  margin-right: 10px;
+  font-size: 14px;
 }
 
 .quantity-buttons {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  margin: 15px;
 }
 
 .quantity-buttons button {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  color: #ccc;
-  padding: 5px 10px;
-  cursor: pointer;
-  font-size: 18px;
+  padding: 5px 8px;
+  font-size: 16px;
+  margin: 5px;
 }
 
-.quantity-buttons input {
-  width: 50px;
-  text-align: center;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+/* @media (min-width: 576px) {
+  .product-image {
+    margin: 70px auto 0;
+    max-width: 100%;
+  }
+} */
+/* 
+@media (min-width: 768px) {
+  .product-image {
+    margin: 70px 0 0 130px;
+    width: 480px;
+    margin-right: 20px;
+  }
+  .title-price-description {
+    margin-top: 50px;
+    text-align: left;
+  }
+  .product-description {
+    font-size: 16px;
+  }
+} */
+
+
+@media (min-width: 1200px) {
+  .product-image {
+    max-width: 500px;
+  }
 }
 
-.add-to-cart {
-  background-color: #5cb85c;
-  border: none;
-  color: #fff;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-size: 18px;
-  margin-top: 20px;
+@media (min-width: 1366px) {
+  .product-image {
+    max-width: 600px;
+  }
+}
+
+@media (min-width: 1600px) {
+  .product-image {
+    max-width: 700px;
+  }
 }
